# ordis

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py  main.py  setup.py
app/: application.py
app/widgets/: layout_screen.py  main_menu.py  option_screen.py
app/widgets/pages/: bitmap_page.py  create_page.py  init_page.py  pages.py  read_page.py  super_block_page.py  write_page.py
clib/: bind.cpp  ordis.cpp  ordis.hpp
mock/enyo/: enyo.hpp
src/: main.py
src/bind/: bind.cpp  main.cpp  runner.hpp
src/bind/mock/: config_parameters.hpp  interfaces.cpp  interfaces.hpp  runner.hpp
src/bind/wrapper/: interfaces.cpp  interfaces.hpp
src/misc/: interpreter.py  natah.py  observer.py
src/view/: application.py  main.py
src/view/pages/: bitmap_page.py  create_page.py  init_page.py  ipage.py  pages.py  read_page.py  super_block_page.py  write_page.py
src/view/widgets/: horizontal_table.py  option_screen.py  vertical_bar.py
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt
tests/src/: main.cpp
